Structure & navbar completed

--- a/index.html
+++ b/index.html
@@ -4,16 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive layout</title>
     <!-- Styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <!-- Navigation bar -->
     <header>
-        <nav>
-
+        <nav class="bg-secondary-dark">
+            <div class="container">
+                <div class="row">
+                    <!-- Logo -->
+                    <div class="grow col-33 col-md-half">
+                        <img src="img/logo.png" alt="Logo">
+                    </div>
+                    <!-- Menu -->
+                    <div class="grow col-66 col-md-half flex v-align r-align">
+                        <div class="lg-menu">
+                            <ul class="flex v-align">
+                                <li><a href="#">Planning</a></li>
+                                <li><a href="#">Testimonials</a></li>
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">About</a> us</li>
+                                <li><a class="btn" href="#">Get Started</a></li>
+                            </ul>
+                        </div>
+                        <div class="md-menu">
+                            <i class="fa-solid fa-bars"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -23,14 +46,23 @@
         <!-- Hero section -->
         <div class="section">
             <div class="container">
-
+                <div class="row">
+                    <div class="grow col-66 col-sm-full"></div>
+                    <div class="grow col-33 col-sm-full"></div>
+                    <div class="grow col-33 col-sm-full"></div>
+                    <div class="grow col-33 col-sm-full"></div>
+                    <div class="grow col-33 col-sm-full"></div>
+                </div>
             </div>
         </div>
 
         <!-- Strategic planning section -->
-        <div class="section">
+        <div class="section bg-primary">
             <div class="container">
-
+                <div class="row">
+                    <div class="col grow col-md-full"></div>
+                    <div class="col grow col-md-full"></div>
+                </div>
             </div>
         </div>
 
@@ -42,31 +74,59 @@
         </div>
 
         <!-- Benefits section -->
-        <div class="section">
+        <div class="section bg-primary">
             <div class="container">
-
+                <div class="row">
+                    <div class="grow col-33 col-md-half col-sm-full"></div>
+                    <div class="grow col-33 col-md-half col-sm-full"></div>
+                    <div class="grow col-33 col-md-half col-sm-full"></div>
+                    <div class="grow col-33 col-md-half col-sm-full"></div>
+                    <div class="grow col-33 col-md-half col-sm-full"></div>
+                    <div class="grow col-33 col-md-half col-sm-full"></div>
+                </div>
             </div>
         </div>
 
         <!-- About us section -->
         <div class="section">
             <div class="container">
-
+                <div class="row">
+                    <div class="grow col-66 col-sm-full"></div>
+                    <div class="grow col-33 col-sm-full"></div>
+                </div>
             </div>
         </div>
 
         <!-- Get started section -->
-        <div class="section">
+        <div class="section bg-primary">
             <div class="container">
+                <div class="row h-align">
+                    <div class="col-66 col-md-full">
+                        <div class="row h-align">
+                            <div class="col-66 col-sm-full">
 
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="bg-tertiary">
+        <div class="container">
+            <div class="row h-align">
+                <div class="col-66 col-md-full">
+                    <div class="row h-align">
+                        <div class="col-66 col-sm-full">
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     
 </body>
