--- a/index.html
+++ b/index.html
@@ -44,14 +44,76 @@
     <main>
 
         <!-- Hero section -->
-        <div class="section">
+        <div class="section hero">
             <div class="container">
                 <div class="row">
-                    <div class="grow col-66 col-sm-full"></div>
-                    <div class="grow col-33 col-sm-full"></div>
-                    <div class="grow col-33 col-sm-full"></div>
-                    <div class="grow col-33 col-sm-full"></div>
-                    <div class="grow col-33 col-sm-full"></div>
+
+                    <!-- Card 1 -->
+                    <div class="grow col-66 col-sm-full">
+                        <div class="card bg-secondary">
+                            <div class="row">
+                                <!-- Info text -->
+                                <div class="col grow col-md-full">
+                                    <h3 class="hero-card-title color-secondary-dark">Get a demo application</h3>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
+                                    <a href="#" class="btn btn-large bg-secondary-dark color-white"><i class="fa-brands fa-apple"></i>App Store</a>
+                                </div>
+                                <!-- Image -->
+                                <div class="col grow col-md-full flex h-align">
+                                    <img src="img/phone.png" alt="Phone">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="grow col-33 col-sm-full">
+                        <div class="card bg-secondary flex h-align v-align">
+                            <!-- Info text -->
+                            <div class="hero-card-title color-secondary-dark">
+                                <i class="fa-solid fa-file-code"></i>
+                                <h3>Clean Code</h3>
+                                <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="grow col-33 col-sm-full">
+                        <div class="card bg-secondary flex h-align v-align">
+                            <!-- Info text -->
+                            <div class="hero-card-title color-secondary-dark">
+                                <i class="fa-solid fa-compass-drafting"></i>
+                                <h3>Web Design</h3>
+                                <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 4 -->
+                    <div class="grow col-33 col-sm-full">
+                        <div class="card bg-secondary flex h-align v-align">
+                            <!-- Info text -->
+                            <div class="hero-card-title color-secondary-dark">
+                                <i class="fa-solid fa-laptop-code"></i>
+                                <h3>Development</h3>
+                                <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 5 -->
+                    <div class="grow col-33 col-sm-full">
+                        <div class="card bg-secondary flex h-align v-align">
+                            <!-- Info text -->
+                            <div class="hero-card-title color-secondary-dark">
+                                <i class="fa-solid fa-bullhorn"></i>
+                                <h3>Branding</h3>
+                                <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
