Strategic planning completed

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <div class="row">
                                 <!-- Info text -->
                                 <div class="col grow col-md-full">
-                                    <h3 class="hero-card-title color-secondary-dark">Get a demo application</h3>
+                                    <h4 class="hero-card-title color-secondary-dark">Get a demo application</h4>
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
                                     <a href="#" class="btn btn-large bg-secondary-dark color-white"><i class="fa-brands fa-apple"></i>App Store</a>
                                 </div>
@@ -72,7 +72,7 @@
                             <!-- Info text -->
                             <div class="hero-card-title color-secondary-dark">
                                 <i class="fa-solid fa-file-code"></i>
-                                <h3>Clean Code</h3>
+                                <h4>Clean Code</h4>
                                 <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                             <!-- Info text -->
                             <div class="hero-card-title color-secondary-dark">
                                 <i class="fa-solid fa-compass-drafting"></i>
-                                <h3>Web Design</h3>
+                                <h4>Web Design</h4>
                                 <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
                             </div>
                         </div>
@@ -96,7 +96,7 @@
                             <!-- Info text -->
                             <div class="hero-card-title color-secondary-dark">
                                 <i class="fa-solid fa-laptop-code"></i>
-                                <h3>Development</h3>
+                                <h4>Development</h4>
                                 <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                             <!-- Info text -->
                             <div class="hero-card-title color-secondary-dark">
                                 <i class="fa-solid fa-bullhorn"></i>
-                                <h3>Branding</h3>
+                                <h4>Branding</h4>
                                 <p class="color-black">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente ut laboriosam sit eum, nemo aperiam sint tempore.</p>
                             </div>
                         </div>
@@ -119,11 +119,24 @@
         </div>
 
         <!-- Strategic planning section -->
-        <div class="section bg-primary">
-            <div class="container">
-                <div class="row">
-                    <div class="col grow col-md-full"></div>
-                    <div class="col grow col-md-full"></div>
+        <div class="section bg-primary strategic-planning">
+            <div class="container container-padding-large container-md-padding-default">
+                <div class="row bottom-align">
+                    <!-- Strategic planning -->
+                    <div class="col grow color-white col-md-full">
+                        <img src="img/planning1.png" alt="Planning 1">
+                        <h3>Strategic Planning</h3>
+                        <p class="color-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad recusandae, quasi maxime commodi repellendus eaque repellat quos fugit quam totam quaerat perspiciatis mollitia voluptas laboriosam necessitatibus quo labore in veritatis!</p>
+                    </div>
+                    <!-- Card -->
+                    <div class="col grow col-md-full flex h-align">
+                        <div class="card bg-white">
+                            <img src="img/planning2.png" alt="Planning 2">
+                            <h4>App Development</h4>
+                            <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                            <a href="#" class="btn bg-primary"><i class="fa-solid fa-arrow-down"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
