--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <!-- Strategic planning -->
                     <div class="col grow color-white col-md-full">
                         <img src="img/planning1.png" alt="Planning 1">
-                        <h3>Strategic Planning</h3>
+                        <h3 class="h3-md-big">Strategic Planning</h3>
                         <p class="color-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad recusandae, quasi maxime commodi repellendus eaque repellat quos fugit quam totam quaerat perspiciatis mollitia voluptas laboriosam necessitatibus quo labore in veritatis!</p>
                     </div>
                     <!-- Card -->
@@ -142,44 +142,183 @@
         </div>
 
         <!-- Testimonials section -->
-        <div class="section">
+        <div class="section testimonials">
             <div class="container">
+                
+                <!-- Testimonials info -->
+                <div class="testimonials-info">
+                    <h6>Testimonials</h6>
+                    <h2 class="color-primary">We are committed expert partners</h2>
+                    <p>We place huge value on strong relationship and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
+                </div>
+
+                <!-- Testimonial Card 1 -->
+                <div class="card bg-primary">
+                    <div class="row">
+                        <!-- Testimonial photo -->
+                        <div class="col-20 col-sm-full">
+                            <div class="round-photo" id="testimonial-1"></div>
+                        </div>
+                        <!-- Testimonial quote -->
+                        <div class="col grow flex v-align col-sm-full">
+                            <div>
+                                <p class="color-white"><i class="fa-solid fa-quote-left"></i> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit dignissimos doloremque iusto similique rerum vero repellat architecto dolor perspiciatis numquam. <i class="fa-solid fa-quote-right"></i></p>
+                                <h6 class="color-white">Nat Reynolds</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Testimonial Card 2 -->
+                <div class="card bg-primary">
+                    <div class="row">
+                        <!-- Testimonial photo -->
+                        <div class="col-20 col-sm-full">
+                            <div class="round-photo" id="testimonial-2"></div>
+                        </div>
+                        <!-- Testimonial quote -->
+                        <div class="col grow flex v-align col-sm-full">
+                            <div>
+                                <p class="color-white"><i class="fa-solid fa-quote-left"></i> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit dignissimos doloremque iusto similique rerum vero repellat architecto dolor perspiciatis numquam. <i class="fa-solid fa-quote-right"></i></p>
+                                <h6 class="color-white">Celia Almeda</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Testimonial Card 3 -->
+                <div class="card bg-primary">
+                    <div class="row">
+                        <!-- Testimonial photo -->
+                        <div class="col-20 col-sm-full">
+                            <div class="round-photo" id="testimonial-3"></div>
+                        </div>
+                        <!-- Testimonial quote -->
+                        <div class="col grow flex v-align col-sm-full">
+                            <div>
+                                <p class="color-white"><i class="fa-solid fa-quote-left"></i> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit dignissimos doloremque iusto similique rerum vero repellat architecto dolor perspiciatis numquam. <i class="fa-solid fa-quote-right"></i></p>
+                                <h6 class="color-white">Bob Roberts</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
 
         <!-- Benefits section -->
-        <div class="section bg-primary">
+        <div class="section bg-primary benefits">
             <div class="container">
+
+                <!-- Benefits title -->
+                <h2 class="color-white">Benefits of working with us</h2>
+
                 <div class="row">
-                    <div class="grow col-33 col-md-half col-sm-full"></div>
-                    <div class="grow col-33 col-md-half col-sm-full"></div>
-                    <div class="grow col-33 col-md-half col-sm-full"></div>
-                    <div class="grow col-33 col-md-half col-sm-full"></div>
-                    <div class="grow col-33 col-md-half col-sm-full"></div>
-                    <div class="grow col-33 col-md-half col-sm-full"></div>
+
+                    <!-- Card 1 -->
+                    <div class="col-33 grow col-md-half col-sm-full">
+                        <div class="card bg-white">
+                            <h1 class="color-primary">01</h1>
+                            <h4 class="color-primary">High Quality</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quos earum doloribus saepe soluta optio, numquam eum eligendi non laudantium.</p>
+                            <a href="#" class="btn btn-large bg-primary color-white">more</a>
+                        </div>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="col-33 grow col-md-half col-sm-full">
+                        <div class="card bg-white">
+                            <h1 class="color-primary">02</h1>
+                            <h4 class="color-primary">Creative Team</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quos earum doloribus saepe soluta optio, numquam eum eligendi non laudantium.</p>
+                            <a href="#" class="btn btn-large bg-primary color-white">more</a>
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="col-33 grow col-md-half col-sm-full">
+                        <div class="card bg-white">
+                            <h1 class="color-primary">03</h1>
+                            <h4 class="color-primary">Amazing Results</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quos earum doloribus saepe soluta optio, numquam eum eligendi non laudantium.</p>
+                            <a href="#" class="btn btn-large bg-primary color-white">more</a>
+                        </div>
+                    </div>
+
+                    <!-- Card 4 -->
+                    <div class="col-33 grow col-md-half col-sm-full">
+                        <div class="card bg-white">
+                            <h1 class="color-primary">04</h1>
+                            <h4 class="color-primary">Best Pricing</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quos earum doloribus saepe soluta optio, numquam eum eligendi non laudantium.</p>
+                            <a href="#" class="btn btn-large bg-primary color-white">more</a>
+                        </div>
+                    </div>
+
+                    <!-- Card 5 -->
+                    <div class="col-33 grow col-md-half col-sm-full">
+                        <div class="card bg-white">
+                            <h1 class="color-primary">05</h1>
+                            <h4 class="color-primary">Innovations</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quos earum doloribus saepe soluta optio, numquam eum eligendi non laudantium.</p>
+                            <a href="#" class="btn btn-large bg-primary color-white">more</a>
+                        </div>
+                    </div>
+
+                    <!-- Card 6 -->
+                    <div class="col-33 grow col-md-half col-sm-full">
+                        <div class="card bg-white">
+                            <h1 class="color-primary">06</h1>
+                            <h4 class="color-primary">24/7 Support</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quos earum doloribus saepe soluta optio, numquam eum eligendi non laudantium.</p>
+                            <a href="#" class="btn btn-large bg-primary color-white">more</a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
 
         <!-- About us section -->
-        <div class="section">
-            <div class="container">
+        <div class="section about-us">
+            <div class="container container-padding-small container-sm-padding-default">
                 <div class="row">
-                    <div class="grow col-66 col-sm-full"></div>
-                    <div class="grow col-33 col-sm-full"></div>
+                    
+                    <!-- Text -->
+                    <div class="col-66 grow col-sm-full">
+                        <h1 class="color-primary">About Us</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga sint laboriosam iste dolorem! Reiciendis, odit eius suscipit maxime fugit architecto aspernatur quaerat ratione temporibus possimus qui, consequuntur velit error exercitationem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda consectetur quo, laborum autem laboriosam voluptas praesentium nihil quaerat delectus quidem tempore modi voluptatum deleniti obcaecati iure non sed, maxime tenetur!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti adipisci voluptates fugit rem debitis nulla, beatae et exercitationem neque tempore ullam, perferendis corrupti laudantium ratione amet, iusto sit vel eligendi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque quasi eius quam, similique sint, tenetur ipsam, laborum nam quaerat repellat adipisci et dicta quisquam facilis quos vel eaque id natus?</p>
+                    </div>
+
+                    <!-- Quote -->
+                    <div class="col-33 grow flex flex-column v-align top-align col-sm-full">
+                        <div class="round-photo" id="about-us-photo">
+                            <i class="fa-solid fa-quote-left color-primary"></i>
+                        </div>
+                        <h3 class="color-primary">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h3>
+                        <a href="#" class="btn bg-primary color-white"><i class="fa-brands fa-linkedin"></i> Find me on LinkedIn</a>
+                    </div>
+
                 </div>
             </div>
         </div>
 
         <!-- Get started section -->
-        <div class="section bg-primary">
+        <div class="section bg-primary get-started">
             <div class="container">
                 <div class="row h-align">
                     <div class="col-66 col-md-full">
+                        <div class="get-started-title">
+                            <h6 class="color-white">Get started</h6>
+                            <h2 class="color-white">Simple, Transparent Pricing</h2>
+                        </div>
                         <div class="row h-align">
                             <div class="col-66 col-sm-full">
-
+                                <h1 class="color-accent">It's Free</h1>
+                                <p class="color-white">We're still in beta and we will be for awhile. As we add more funcionality, we'll look into other plans with more controls.</p>
+                                <a href="#" class="btn btn-jumbo color-primary">Get Started</a>
+                                <p class="color-white">Copyright 2021 Boolean - Classe XX - <a href="#">Privacy Policy</a></p>
                             </div>
                         </div>
                     </div>
@@ -196,7 +335,8 @@
                 <div class="col-66 col-md-full">
                     <div class="row h-align">
                         <div class="col-66 col-sm-full">
-
+                            <p class="color-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eveniet, totam ea ipsa voluptatum ullam.</p>
+                            <p class="color-white"><a href="#">Lorem ipsum</a> dolor sit amet consectetur <a href="#">Boolean Careers</a></p>
                         </div>
                     </div>
                 </div>
